--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.18.7",
+    "@pinia/nuxt": "^0.5.5",
     "nuxt": "^3.13.0",
     "openai": "^4.67.3",
+    "pinia": "^2.2.4",
     "vue": "latest",
     "vue-router": "latest"
   }
